# smetch-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  Procfile  README.md  SECURITY.md  config.yaml  gitcmds.py  help_channels.py  helpcmd.py  helperping.py  keep_alive.py  main.py  mathcmds.py  moderation.py  pyproject.toml  requirements.txt  test_config.yml  thank.py  tox.ini  util_commands.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: report-a-problem.md  request-a-feature-for-smetch-bot.md
.github/workflows/: codeql-analysis.yml  discord.yml  linting.yml
bot/: bot.py  constants.py  log_setup.py  main.py
bot/backend/: __init__.py  database.py  error_handler.py
bot/exts/: __init__.py
bot/exts/backend/: database.py  error_handler.py  tag.py
bot/exts/information/: __init__.py  information.py
bot/exts/moderation/: __init__.py  detection.py  kick.py  moderation.py
bot/exts/potd/: potd.py  submission.py
bot/exts/utils/: utils.py
bot/resources/: acd.md
bot/resources/tags/: acd.md
bot/utils/: checks.py  regex.py  time.py
cogs/: DMReply.py  ghCmd.py  helpChannels.py  thanking.py  utils.py  wolfram.py
cogs/moderation/: ban.py  cases.py  kick.py  mute.py  purge.py  warn.py
core/: checks.py  database.py  embeds.py  files.py
data/: logs.yml  permissions.yml  thank_settings.yml
tests/: test_constants.py
tests/helpers/: mock_yaml.py
